--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <a href="iilhamagungp@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
             <a href="https://www.facebook.com/ilham.akunutama" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/iilhamagung/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://t witter.com/your-profile" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://x.com/iilhamagung_?t=90t_F1Yq_8hgwJdNLqq41Q&s=09" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
         <p>&copy; 2024 Ilham Agung, All Rights Reserved</p>
     </footer>
