--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </main>
     <footer>
         <div class="social-icons">
-            <a href="iilhamagungp@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:contact@iilhamagungp@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
             <a href="https://www.facebook.com/ilham.akunutama" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/iilhamagung/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://x.com/iilhamagung_?t=90t_F1Yq_8hgwJdNLqq41Q&s=09" target="_blank"><i class="fab fa-twitter"></i></a>
