--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <a href="https://www.instagram.com/iilhamagung/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://x.com/iilhamagung_?t=90t_F1Yq_8hgwJdNLqq41Q&s=09" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
-        <p>&copy; 2024 Ilham Agung, All Rights Reserved</p>
+        <p>&copy; Special thanks to my woman, my girlfriend, my future wife and everything about her in this world, Naila Zhafira.</p>
     </footer>
 </body>
 </html>
